<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="26dp"
    tools:context=".LoginActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="140dp"
        android:text="@string/hamlet"
        android:textColor="#0065FC"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_editText_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="64dp"
        android:hint="@string/email"
        app:boxStrokeColor="#BFBFBF"
        app:errorTextColor="#EC0D0D"
        android:textSize="14sp"
        android:textColorHint="#666666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_editText_id"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:hint="@string/password"
        app:boxStrokeColor="#BFBFBF"
        app:errorTextColor="#EC0D0D"
        android:textSize="14sp"
        android:textColorHint="#666666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_editText_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



<Button
    android:id="@+id/login_Btn"
    android:layout_width="match_parent"
    android:layout_marginTop="64dp"
    android:background="#0065FC"
    android:text="@string/login"
    android:textSize="18sp"
    android:textColor="#fff"
    app:layout_constraintTop_toBottomOf="@id/password_editText_id"
    android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:text="@string/forgot_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_Btn"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>