<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#E1E1E1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.employeefragment.PersonalInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:background="#BAB8B8"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/employees_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/date_of_birth"
        android:textColor="#505F75"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <TextView
        android:id="@+id/employees_dob_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:textColor="#102F41"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/employees_dob"
        app:layout_constraintTop_toBottomOf="@id/employees_dob"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:background="#BAB8B8"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employees_dob_text"
        android:layout_height="1dp"/>


    <TextView
        android:id="@+id/employees_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gender"
        android:textColor="#505F75"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />


    <TextView
        android:id="@+id/employees_gender_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text=""
        android:textColor="#102F41"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/employees_gender"
        app:layout_constraintTop_toBottomOf="@id/employees_gender"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:background="#BAB8B8"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employees_gender_textview"
        android:layout_height="1dp"/>



    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="10dp"
        android:textColor="#505F75"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#102F41"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_tv" />


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:background="#BAB8B8"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_height="1dp"/>


    <TextView
        android:id="@+id/home_address_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_address"
        android:layout_marginTop="10dp"
        android:textColor="#505F75"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4" />

    <TextView
        android:id="@+id/home_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#102F41"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_address_tv" />


    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:background="#BAB8B8"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_address"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="10dp"
        android:textColor="#505F75"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view5" />

    <TextView
        android:id="@+id/em_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#102F41"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_tv" />


    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:background="#BAB8B8"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/em_phone_number"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/emergency_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_number"
        android:layout_marginTop="10dp"
        android:textColor="#505F75"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view6" />

    <TextView
        android:id="@+id/emergency_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#102F41"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emergency_number_tv" />


    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:background="#BAB8B8"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emergency_number"
        android:layout_height="1dp"/>


    <TextView
        android:id="@+id/contact_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        android:layout_marginTop="10dp"
        android:textColor="#505F75"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view7" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#102F41"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_name_tv" />


    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:background="#BAB8B8"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_name"
        android:layout_height="1dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>