<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_profile_ui"
    tools:context=".fragments.companyfragment.CompanyDetailsFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/company_picture"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginTop="14dp"
                app:civ_border_color="#EEF1F4"
                app:civ_border_width="2dp"
                android:elevation="4dp"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="#EEF1F4"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/company_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_picture"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/company_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text=""
                android:textColor="#EEF1F4"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_globe"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/company_name"
                app:layout_constraintTop_toBottomOf="@id/company_name" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="18dp"
                app:cardBackgroundColor="#2A7CF8"
                app:cardCornerRadius="8dp"
                app:contentPadding="10dp"
                app:cardElevation="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_email">



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/total_employees_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_employees"
                        android:textColor="#EEF1F4"

                        android:textSize="12sp"
                        app:layout_constraintHorizontal_bias="0.11"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="@id/view_1"

                        app:layout_constraintTop_toTopOf="@id/view_1" />

                    <TextView
                        android:id="@+id/total_employees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="#EEF1F4"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="@id/total_employees_tv"
                        app:layout_constraintRight_toRightOf="@id/total_employees_tv"
                        app:layout_constraintTop_toTopOf="@id/total_employees_tv" />

                    <View
                        android:id="@+id/view_1"
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:background="#FFF"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toRightOf="@id/total_employees_tv"
                        app:layout_constraintRight_toLeftOf="@id/view_2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/company_city_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textColor="#EEF1F4"
                        android:textSize="12sp"
                        app:layout_constraintHorizontal_bias="0.51"
                        app:layout_constraintLeft_toRightOf="@id/view_1"
                        app:layout_constraintRight_toRightOf="@id/view_2"
                        app:layout_constraintTop_toTopOf="@id/view_1" />

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="#EEF1F4"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintRight_toRightOf="@id/company_city_tv"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="@id/company_city_tv"
                        app:layout_constraintTop_toTopOf="@id/total_employees_tv" />

                    <View
                        android:id="@+id/view_2"
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:background="#FFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintLeft_toRightOf="@id/city"
                        app:layout_constraintRight_toLeftOf="@id/company_state_tv"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/company_state_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textColor="#EEF1F4"
                        android:textSize="12sp"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintLeft_toRightOf="@id/view_2"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/view_1"/>

                    <TextView
                        android:id="@+id/company_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:textColor="#EEF1F4"
                        android:textSize="14sp"
                        app:layout_constraintRight_toRightOf="@id/company_state_tv"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="@id/company_state_tv"
                        app:layout_constraintTop_toTopOf="@id/total_employees_tv" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/profile_background"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@id/cardView">





                <TextView
                    android:id="@+id/company_service_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/services"
                    android:textColor="#505F75"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <TextView
                    android:id="@+id/company_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#102F41"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/company_service_tv"
                    app:layout_constraintTop_toBottomOf="@id/company_service_tv" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#BAB8B8"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_service" />


                <TextView
                    android:id="@+id/company_address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/company_address"
                    android:textColor="#505F75"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view3" />

                <TextView
                    android:id="@+id/company_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#102F41"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_address_tv" />


                <View
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#BAB8B8"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_address" />


                <TextView
                    android:id="@+id/company_website_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/company_website"
                    android:textColor="#505F75"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view4" />

                <TextView
                    android:id="@+id/company_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#102F41"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_website_tv" />


                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#BAB8B8"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_website" />

                <TextView
                    android:id="@+id/company_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/company_phone_number"
                    android:textColor="#505F75"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view5" />

                <TextView
                    android:id="@+id/company_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#102F41"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_number_tv" />


                <View
                    android:id="@+id/view6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#BAB8B8"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_website" />


                <View
                    android:id="@+id/view7"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="#BAB8B8"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_phone_number" />

                <TextView
                    android:id="@+id/company_zipcode_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/zipcode"
                    android:textColor="#505F75"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view7" />

                <TextView
                    android:id="@+id/company_zip_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#102F41"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_zipcode_tv" />


                <View
                    android:id="@+id/view8"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#BAB8B8"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/company_zip_code" />



            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</FrameLayout>